# orc-format

./: .gitignore  Cargo.toml  DataEngineeringLabs:main  README.md  write.py
.github/workflows/: coverage.yml  test.yml
src/: error.rs  lib.md  lib.rs  proto.rs
src/read/: column.rs  decode.rs  mod.rs  stripe.rs
src/read/decode/: boolean_rle.rs  float.rs  mod.rs  rle_v2.rs  variable_length.rs
src/read/decompress/: mod.rs
tests/examples/: LICENSE  README
tests/it/: compare_json.rs  deserialize.rs  main.rs
