[package]
name = "orc-format"
version = "0.3.0"
license = "MIT/Apache-2.0"
description = "Unofficial implementation of Apache ORC spec in safe Rust"
homepage = "https://github.com/DataEngineeringLabs/orc-format"
repository = "https://github.com/DataEngineeringLabs/orc-format"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com>"]
keywords = [ "orc", "analytics" ]
edition = "2021"

[dependencies]
prost = { version = "0.9.0" }
flate2 = "1"
fallible-streaming-iterator = { version = "0.1" }

[dev-dependencies]
json = "0.12"
